--- a/programs/zero-fractal/Cargo.toml
+++ b/programs/zero-fractal/Cargo.toml
@@ -9,12 +9,15 @@ crate-type = ["cdylib", "lib"]
 name = "zero_fractal"
 
 [features]
+idl-build = ["anchor-lang/idl-build"]
 default = []
 cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+anchor-debug = []
+custom-heap = []
 
 [dependencies]
 anchor-lang = "0.30.1"
+fractal = { path = "../../crates/fractal" }
