--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["crates/*", "programs/*"]
-exclude = ["test-sketch", "sketch"]
+exclude = ["test-sketch", "sp1"]
 resolver = "2"
 
 [profile.release]
