--- a/sp1/program/Cargo.toml
+++ b/sp1/program/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 sp1-zkvm = "4.0.1"
-fractal = { path = "../crates/fractal" }
+fractal = { path = "../../crates/fractal" }
